--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,10 @@ body {
     height: 200px;
 }
 
+.container {
+    max-width:800px;
+    margin: 0 auto;
+    color: cornflowerblue;
+    font-family: fantasy;
+    padding-top: 60px;
+}
